--- a/src/main/resources/properties/help_en.properties
+++ b/src/main/resources/properties/help_en.properties
@@ -32,7 +32,7 @@ link.schemaPane=Classification scheme
 link.secondStep=Creating SIPs: second step
 link.templatingSystem=Templating system
 metadataMethod=SIPs may contain data and metadata. The metadata is included in each SIP by means of association rules. These association rules define how descriptive metadata selected from the file system is included inside each SIP. There are currently four available metadata association options.
-schemaPane=<p>To create a classification plan, the first step is to add description items using the <strong>Add</strong> button present at the bottom of the central panel. When the button is pressed, a new description item is created and appended under the selected description item or under the root if no description item is selected or the selected item is a SIP. The levels are created by default with a metadata file obtained using the <em>EAD 2002</em> template.</p>\
+schemaPane=<p>To create a classification plan, the first step is to add description items using the <strong>Add</strong> button present at the bottom of the central panel. When the button is pressed, a new description item is created and appended under the selected description item or under the root if no description item is selected or the selected item is a SIP.</p>\
 <p>The removal process starts by selecting the items we wish to remove and clicking the <strong>Remove</strong> button, available at the bottom of the panel. Any selected SIPs are removed and its contents return to the normal state, so that they can be added to other SIPs. When a description item is removed, all its descendant SIPs are also removed.</p>\
 <p>By dragging and dropping selected items on top of other items, the classification scheme can be completely <strong>re-organized</strong>. The behaviour of the drag’n’drop system is described as follows:</p>\
 <ul>\
@@ -42,7 +42,7 @@ schemaPane=<p>To create a classification plan, the first step is to add descript
 <li>When dropping a parent on one of its descendants the action is cancelled, otherwise there would be no connection left to the rest of the tree and the entire sub-tree (starting on the dragged item) would be lost.</li>\
 </ul>\
 <p>After the classification scheme is completed, you may opt to save it for later use using the “Export” menu option which can be found under the <strong>Classification Scheme menu</strong>. Lastly, the footer displays information about the selected item: the number of SIPs, folders, files and size.</p>
-secondStep=The classification scheme can either be imported from file or created directly in the application. In the first option, the user must import a JSON formatted file which was either exported by RODA or RODA-in, since these are the only supported formats at the time. To create a classification plan, the first step is to add description items using the "Add" button present at the bottom of the central panel. When the button is pressed, a new description item is created and appended under the selected description item or under the root if no description item is selected or the selected item is a SIP. The levels are created by default with a metadata file obtained using the EAD 2002 template. Since the metadata file was created using a template, a form is available where the user can edit the title and description level of the item. In addition to adding items, there are two other actions available, removal and organization.
+secondStep=The classification scheme can either be imported from file or created directly in the application. In the first option, the user must import a JSON formatted file which was either exported by RODA or RODA-in, since these are the only supported formats at the time. To create a classification plan, the first step is to add description items using the "Add" button present at the bottom of the central panel. When the button is pressed, a new description item is created and appended under the selected description item or under the root if no description item is selected or the selected item is a SIP. In addition to adding items, there are two other actions available, removal and organization.
 templatingSystem=<h4>The templating system</h4>\
 \
 <p>Since it's tedious to edit the template files by hand, we added a way to create forms based on the fields of the templates. These files are located in the "roda-in" folder (My Documents when using Windows and the user's home directory if using Unix), under the "templates" folder. Using the powerful Handlebars engine, anyone can create template files with the necessary information to create the form. In addition to a simple tag, (e.g. {{person}}), we can now add options which will modify the way each field is created. These options are key-value elements, e.g. <code>title="SIP creation using RODA-in"</code>, where the key is the name of the option and the value is the value that will be given to that option. Only the first tag should have options, i.e., if there's two tags with the same name, the options of the second are ignored. The options are not required, the form is still created with a simple tag, which creates a simple text field.</p>\
@@ -58,7 +58,12 @@ templatingSystem=<h4>The templating system</h4>\
 <li>text - text field</li>\
 <li>text-area - Text area. Larger than a field text.</li>\
 <li>date - text field with a date picker</li>\
-<li>list - list with the possible values (combo box)</li>\
+<li>list - list with the possible values (combo box)\
+<ul>\
+<li>options - List with the possible values that a field can have. This list is a JSonArray. Example: options="[\"final\",\"revised\",\"draft\"]"</li>\
+<li>optionsLabels - Map with the labels for each option. The key must match one of the options specified in the "options" list. The entry is another map, mapping a language (key) to a label (value). Example: optionsLabels="{\"final\": {\"en\":\"Final\", \"pt_PT\":\"Final\"},\"revised\": {\"en\":\"Revised\", \"pt_PT\":\"Verificado\"},\"draft\": {\"en\":\"Draft\", \"pt_PT\":\"Rascunho\"}}"</li>\
+</ul>\
+</li>\
 </ul></li>\
 <li>list - List with the possible values that a field can have. Usable when <code>type="list"</code>. The format is a JSON array. Example: <code>[option A, option B, "option C"]</code></li>\
 <li>label - The label that appears to the left of the field.</li>\
