--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.remaining=Tiempo restante
 CreationModalProcessing.subtitle=Creado %d of %d (%d%%)
 FileExplorerPane.chooseDir=Seleccionar carpeta
 FileExplorerPane.help.title=Seleccionar carpeta que contiene sus archivos
-FileExplorerPane.title=Explorador de archivos fuente
+FileExplorerPane.title=1 - Explorador de Archivos
 InspectionPane.help.ruleList=Asociar archivos / directorios\na un objeto Descripción\npara crear una nueva asociación
 InspectionPane.help.title=Seleccione un elemento del\nesquema\nla clasificación para inspeccionarlo
 InspectionPane.metadata=Metadata
@@ -78,7 +78,7 @@ SchemaPane.add=Agregar
 SchemaPane.help.title=Carga tu\nesquema de clasificación
 SchemaPane.newNode=Nuevo nodo
 SchemaPane.remove=Quitar
-SchemaPane.title=Esquema de Clasificación
+SchemaPane.title=2 - Paquetes de Información
 SchemaPane.create=Nuevo Esquema de Clasificación
 SchemaPane.load=Cargar Esquema de Clasificación
 SchemaPane.or=o crear uno
@@ -105,7 +105,7 @@ metadata.diffFolder.title=Cargar desde un directorio
 metadata.diffFolder.description=Utilice esta opción para seleccionar un directorio en el cual se encuentren todos los archivos de metadatos para incluir en los SIP. La asociación entre los archivos de metadatos y los SIP se realiza a través del nombre de archivo (haciendo caso omiso de la extensión). En los casos en que ninguna asociación se puede hacer, el SIP no contendrá metadatos.
 metadata.template.title=Crear nuevo metadata desde plantilla
 metadata.template.description=Utilice esta opción para crear los metadatos desde un modelo predefinido. Los metadatos asociados serán los mismos para cada SIP. Después de la creación del SIP, el usuario debe editar los metadatos de acuerdo a los datos asociados a cada paquete.
-export=Exportar
+export=Criar SIP(s)
 SchemaPane.dragHelp=Arrastre los archivos/directorios aquí
 SchemaPane.confirmRemove.header=¿Está usted seguro de quitar este nivel?
 SchemaPane.confirmRemove.content=Esta acción eliminará todos los niveles de descripción seleccionados.
@@ -175,7 +175,7 @@ metadata.language=Lenguaje
 metadata.description=Descripción
 metadata.rights=Derechos
 metadata.level=Nivel de Descripción
-InspectionPane.title=Inspección
+InspectionPane.title=3 - Inspector
 InspectionPane.changeTemplate.title=Plantilla de anulación
 InspectionPane.changeTemplate.header=Usted quiere anular la plantilla?
 InspectionPane.changeTemplate.content=Ya no podrá utilizar el formulario para editar este archivo de metadatos.
