--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.remaining=Hátralévő idő
 CreationModalProcessing.subtitle=%d elkészült %d (%d%%)-ből
 FileExplorerPane.chooseDir=Mappaválasztás
 FileExplorerPane.help.title=Válaszd ki a fájlokat\ntartalmazó mappát
-FileExplorerPane.title=Forrásfájlkereső
+FileExplorerPane.title=1 - Forrásfájlkereső
 InspectionPane.help.ruleList=Párosítsd a fájlokat/mappákat a leírási elemekkel új összerendeléshez.
 InspectionPane.help.title=Besorolási séma \nelemeinek kiválasztása\nés megtekintése
 InspectionPane.metadata=Metaadatok
@@ -78,7 +78,7 @@ SchemaPane.add=Hozzáadás
 SchemaPane.help.title=Saját besorolási séma\nbetöltése
 SchemaPane.newNode=Új elágazás
 SchemaPane.remove=Eltávolít
-SchemaPane.title=Besorolási séma
+SchemaPane.title=2 - Besorolási séma
 SchemaPane.create=Új besorolási séma
 SchemaPane.load=Besorolási séma betöltése
 SchemaPane.or=vagy
@@ -105,7 +105,7 @@ metadata.diffFolder.title=Egy mappából való betöltés
 metadata.diffFolder.description=Ebben a módban azt a mappát lehet megjelölni, ahol valamennyi, a SIP-be betöltendő metaadat fájl van. A metaadatfájlok és a SIP-ek összerendelése a (kiterjesztés nélküli) fájlnéven keresztül történik. Azokban a SIP-ekben, ahol az összerendelés nem lehetséges, nem lesz metaadat.
 metadata.template.title=Új metaadatok létrehozása sablonból
 metadata.template.description=Ezzel előre meghatározott sablonból lehet létrehozni. Ilyenkor valamennyi SIP-be ugyanaz a metaadat kerül. A SIP létrehozása után a felhasználó az csomagban lévő elsődleges adatok alapján a metaadatokat tovább szerkesztheti.
-export=Export
+export=Create SIP(s)
 SchemaPane.dragHelp=Mappák/fájlok elhelyezése\n
 SchemaPane.confirmRemove.header=Biztos vagy benne, hogy ezek a fájlok eltávolíthatók?
 SchemaPane.confirmRemove.content=A művelet eltávolítja valamennyi kiválasztott leírási szintet.
@@ -175,7 +175,7 @@ metadata.language=Nyelv
 metadata.description=Leírás
 metadata.rights=Felhasználási korlátozások
 metadata.level=Leírási szint
-InspectionPane.title=Ellenőrzés
+InspectionPane.title=3 - Ellenőrzés
 InspectionPane.changeTemplate.title=Sablon felülírása
 InspectionPane.changeTemplate.header=Felülírod a sablont?
 InspectionPane.changeTemplate.content=A későbbiekben nem tudod majd az űrlapot használni a metaadatfájl szerkesztésére.
