--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -39,7 +39,7 @@ CreationModalProcessing.subtitle=Criado %d de %d (%d%%)
 
 FileExplorerPane.chooseDir=Escolher pasta
 FileExplorerPane.help.title=Selecione as pastas\nque contêm os seus ficheiros
-FileExplorerPane.title=Explorador de ficheiros
+FileExplorerPane.title=1 - Explorador de ficheiros
 
 InspectionPane.help.ruleList=Associe ficheiros/pastas \na um nível de descrição \npara criar uma nova associação
 InspectionPane.help.title=Escolha um item \ndo plano de classificação\npara o inspecionar
@@ -86,7 +86,7 @@ SchemaPane.add=Adicionar
 SchemaPane.help.title=Carregue o\nplano de classificaçao
 SchemaPane.newNode=Novo nível descritivo
 SchemaPane.remove=Remover
-SchemaPane.title=Plano de classificação
+SchemaPane.title=2 - Pacotes de Informação
 SchemaPane.create=novo plano de classificação
 SchemaPane.load=Carregar plano\nde classificação
 SchemaPane.or=ou crie um
@@ -123,7 +123,7 @@ metadata.diffFolder.description = Use esta opção para selecionar uma pasta ond
 
 metadata.template.title = Criar metadados a partir de um modelo
 metadata.template.description = Use esta opção para criar metadados a partir do modelo definido na configuração. Os metadados associados a cada pacote de submissão serão todos iguais. Após a criação dos pacotes o utilizador deverá editar os metadados de acordo com os dados associados a cada pacote.
-export=Exportar
+export=Criar SIP(s)
 SchemaPane.dragHelp=Arraste ficheiros ou pastas\npara criar uma associação
 SchemaPane.confirmRemove.header=Tem a certeza que quer remover este nível?
 SchemaPane.confirmRemove.content=Este processo irá remover todos os níveis descritivos seleccionados.
@@ -160,7 +160,7 @@ data=Dados
 InspectionPane.addRepresentation=Adicionar representação
 InspectionPane.removeRepresentation=Remover representação
 documentation=Documentação
-InspectionPane.docsHelp.title=Arraste ficheiros/pastas\npara adicionar documentação
+InspectionPane.docsHelp.title=Arraste ficheiros/pastas do Explorador de Ficheiros\npara adicionar documentação
 InspectionPane.onDropDocs=Adicionar documentação
 SimpleSipCreator.documentation=A adicionar documentação
 SimpleSipCreator.initZIP=A criar zip
@@ -194,7 +194,7 @@ metadata.language=Idioma
 metadata.description=Descrição
 metadata.rights=Direitos
 metadata.level=Nível descritivo
-InspectionPane.title=Inspecionar
+InspectionPane.title=3 - Inspecionar
 InspectionPane.changeTemplate.title=Sobrepôr modelo
 InspectionPane.changeTemplate.header=Pretende sobrepor o modelo atual?
 InspectionPane.changeTemplate.content=Deixará de conseguir usar o formulário para editar este ficheiro de metadados.
