--- a/src/main/resources/properties/lang_es_CL.properties
+++ b/src/main/resources/properties/lang_es_CL.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.remaining=Tiempo restante
 CreationModalProcessing.subtitle=Creado %d of %d (%d%%)
 FileExplorerPane.chooseDir=Seleccionar carpeta
 FileExplorerPane.help.title=Seleccionar carpeta que contiene sus archivos
-FileExplorerPane.title=1 - Explorador de Archivos
+FileExplorerPane.title=1: Explorador de Archivos
 InspectionPane.help.ruleList=Asociar archivos / directorios\na un objeto Descripción\npara crear una nueva asociación
 InspectionPane.help.title=Seleccione un elemento del\nesquema\nla clasificación para inspeccionarlo
 InspectionPane.metadata=Metadata
@@ -78,7 +78,7 @@ SchemaPane.add=Agregar
 SchemaPane.help.title=Carga tu\nesquema de clasificación
 SchemaPane.newNode=Nuevo nodo
 SchemaPane.remove=Quitar
-SchemaPane.title=2 - Paquetes de Información
+SchemaPane.title=2: Paquetes de Información
 SchemaPane.create=Nuevo Esquema de Clasificación
 SchemaPane.load=Cargar Esquema de Clasificación
 SchemaPane.or=o crear uno
@@ -175,7 +175,7 @@ metadata.language=Lenguaje
 metadata.description=Descripción
 metadata.rights=Derechos
 metadata.level=Nivel de Descripción
-InspectionPane.title=3 - Inspector
+InspectionPane.title=3: Inspector
 InspectionPane.changeTemplate.title=Plantilla de anulación
 InspectionPane.changeTemplate.header=Usted quiere anular la plantilla?
 InspectionPane.changeTemplate.content=Ya no podrá utilizar el formulario para editar este archivo de metadatos.
