--- a/src/main/resources/properties/lang_hu.properties
+++ b/src/main/resources/properties/lang_hu.properties
@@ -37,7 +37,7 @@ CreationModalProcessing.remaining=Hátralévő idő
 CreationModalProcessing.subtitle=%d elkészült %d (%d%%)-ből
 FileExplorerPane.chooseDir=Mappaválasztás
 FileExplorerPane.help.title=Válaszd ki a fájlokat\ntartalmazó mappát
-FileExplorerPane.title=1 - Forrásfájlkereső
+FileExplorerPane.title=1: Forrásfájlkereső
 InspectionPane.help.ruleList=Párosítsd a fájlokat/mappákat a leírási elemekkel új összerendeléshez.
 InspectionPane.help.title=Besorolási séma \nelemeinek kiválasztása\nés megtekintése
 InspectionPane.metadata=Metaadatok
@@ -78,7 +78,7 @@ SchemaPane.add=Hozzáadás
 SchemaPane.help.title=Saját besorolási séma\nbetöltése
 SchemaPane.newNode=Új elágazás
 SchemaPane.remove=Eltávolít
-SchemaPane.title=2 - Besorolási séma
+SchemaPane.title=2: Besorolási séma
 SchemaPane.create=Új besorolási séma
 SchemaPane.load=Besorolási séma betöltése
 SchemaPane.or=vagy
@@ -175,7 +175,7 @@ metadata.language=Nyelv
 metadata.description=Leírás
 metadata.rights=Felhasználási korlátozások
 metadata.level=Leírási szint
-InspectionPane.title=3 - Ellenőrzés
+InspectionPane.title=3: Ellenőrzés
 InspectionPane.changeTemplate.title=Sablon felülírása
 InspectionPane.changeTemplate.header=Felülírod a sablont?
 InspectionPane.changeTemplate.content=A későbbiekben nem tudod majd az űrlapot használni a metaadatfájl szerkesztésére.
